--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       - "--entrypoints.web.http.redirections.entrypoint.scheme=https"
       # HTTPS configuration
       - "--entrypoints.websecure.address=:443"
+      - "--log.level=DEBUG"  # Enable debug logging
       # Let's Encrypt configuration
       - "--certificatesresolvers.letsencrypt.acme.httpchallenge=true"
       - "--certificatesresolvers.letsencrypt.acme.httpchallenge.entrypoint=web"
@@ -44,6 +45,8 @@ services:
       - "traefik.http.routers.api.entrypoints=websecure"
       - "traefik.http.routers.api.tls=true"
       - "traefik.http.routers.api.tls.certresolver=letsencrypt"
+      - "traefik.http.routers.api.middlewares=api-stripprefix"
+      - "traefik.http.middlewares.api-stripprefix.stripprefix.prefixes=/api"
       - "traefik.http.services.api.loadbalancer.server.port=8000"
       # Streamlit configuration
       - "traefik.http.routers.streamlit.rule=Host(`calculator.unilog.company`)"
