--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,25 +7,13 @@ services:
       - "--api.insecure=true"
       - "--providers.docker=true"
       - "--providers.docker.exposedbydefault=false"
-      # HTTP configuration
       - "--entrypoints.web.address=:80"
-      - "--entrypoints.web.http.redirections.entrypoint.to=websecure"
-      - "--entrypoints.web.http.redirections.entrypoint.scheme=https"
-      # HTTPS configuration
-      - "--entrypoints.websecure.address=:443"
       - "--log.level=DEBUG"  # Enable debug logging
-      # Let's Encrypt configuration
-      - "--certificatesresolvers.letsencrypt.acme.httpchallenge=true"
-      - "--certificatesresolvers.letsencrypt.acme.httpchallenge.entrypoint=web"
-      - "--certificatesresolvers.letsencrypt.acme.email=admin@unilog.company"
-      - "--certificatesresolvers.letsencrypt.acme.storage=/letsencrypt/acme.json"
     ports:
-      - "80:80"
-      - "443:443"
-      - "8080:8080"  # Traefik dashboard
+      - "127.0.0.1:80:80"  # Only bind to localhost
+      - "127.0.0.1:8080:8080"  # Traefik dashboard
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
-      - ./letsencrypt:/letsencrypt  # Persist SSL certificates
     networks:
       - traefik-public
 
@@ -42,17 +30,11 @@ services:
       - "traefik.enable=true"
       # FastAPI configuration
       - "traefik.http.routers.api.rule=Host(`api.calculator.unilog.company`)"
-      - "traefik.http.routers.api.entrypoints=websecure"
-      - "traefik.http.routers.api.tls=true"
-      - "traefik.http.routers.api.tls.certresolver=letsencrypt"
-      - "traefik.http.routers.api.middlewares=api-stripprefix"
-      - "traefik.http.middlewares.api-stripprefix.stripprefix.prefixes=/api"
+      - "traefik.http.routers.api.entrypoints=web"
       - "traefik.http.services.api.loadbalancer.server.port=8000"
       # Streamlit configuration
       - "traefik.http.routers.streamlit.rule=Host(`calculator.unilog.company`)"
-      - "traefik.http.routers.streamlit.entrypoints=websecure"
-      - "traefik.http.routers.streamlit.tls=true"
-      - "traefik.http.routers.streamlit.tls.certresolver=letsencrypt"
+      - "traefik.http.routers.streamlit.entrypoints=web"
       - "traefik.http.services.streamlit.loadbalancer.server.port=8501"
     restart: unless-stopped
     healthcheck:
