--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,65 @@
 version: '3.8'
 
 services:
+  traefik:
+    image: traefik:v2.10
+    command:
+      - "--api.dashboard=true"
+      - "--api.insecure=true"
+      - "--providers.docker=true"
+      - "--providers.docker.exposedbydefault=false"
+      - "--entrypoints.web.address=:80"
+      - "--entrypoints.web.http.redirections.entrypoint.to=websecure"
+      - "--entrypoints.web.http.redirections.entrypoint.scheme=https"
+      - "--entrypoints.websecure.address=:443"
+      - "--certificatesresolvers.myresolver.acme.httpchallenge=true"
+      - "--certificatesresolvers.myresolver.acme.httpchallenge.entrypoint=web"
+      - "--certificatesresolvers.myresolver.acme.email=admin@unilog.company"
+      - "--certificatesresolvers.myresolver.acme.storage=/letsencrypt/acme.json"
+      - "--log.level=DEBUG"
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+      - traefik-certificates:/letsencrypt
+    networks:
+      - web
+    restart: unless-stopped
+
   shipping-calculator:
     build: .
-    ports:
-      - "8000:8000"  # FastAPI
-      - "8501:8501"  # Streamlit
+    networks:
+      - web
     volumes:
-      - ./data:/app/data  # Persist data directory
-      - ./.env:/app/.env  # Mount environment variables
+      - ./data:/app/data
+      - ./.env:/app/.env
     environment:
       - PYTHONUNBUFFERED=1
+    labels:
+      - "traefik.enable=true"
+      # FastAPI configuration
+      - "traefik.http.routers.api.rule=Host(`api.calculator.unilog.company`)"
+      - "traefik.http.routers.api.entrypoints=websecure"
+      - "traefik.http.routers.api.tls=true"
+      - "traefik.http.routers.api.tls.certresolver=myresolver"
+      - "traefik.http.services.api.loadbalancer.server.port=8000"
+      # Streamlit configuration
+      - "traefik.http.routers.streamlit.rule=Host(`calculator.unilog.company`)"
+      - "traefik.http.routers.streamlit.entrypoints=websecure"
+      - "traefik.http.routers.streamlit.tls=true"
+      - "traefik.http.routers.streamlit.tls.certresolver=myresolver"
+      - "traefik.http.services.streamlit.loadbalancer.server.port=8501"
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
       interval: 30s
       timeout: 10s
       retries: 3
+
+networks:
+  web:
+    driver: bridge
+
+volumes:
+  traefik-certificates:
