--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,22 +11,14 @@ services:
       - "--api.dashboard=true"
       - "--providers.docker=true"
       - "--providers.docker.exposedbydefault=false"
-      - "--entrypoints.web.address=:8081"           # Changed to 8081
-      - "--entrypoints.web.http.redirections.entrypoint.to=websecure"
-      - "--entrypoints.web.http.redirections.entrypoint.scheme=https"
+      - "--entrypoints.web.address=:8081"
       - "--entrypoints.websecure.address=:9444"
-      - "--certificatesresolvers.myresolver.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory"
-      - "--certificatesresolvers.myresolver.acme.httpchallenge=true"
-      - "--certificatesresolvers.myresolver.acme.httpchallenge.entrypoint=web"
-      - "--certificatesresolvers.myresolver.acme.email=admin@unilog.company"
-      - "--certificatesresolvers.myresolver.acme.storage=/letsencrypt/acme.json"
     ports:
-      - "8081:8081"    # Changed HTTP port
+      - "8081:8081"    # HTTP
       - "9444:9444"    # HTTPS
-      - "8082:8080"    # Dashboard (mapped to different external port)
+      - "8082:8080"    # Dashboard
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
-      - traefik-certificates:/letsencrypt
       - ./logs/traefik:/var/log/traefik
     networks:
       - web
@@ -45,15 +37,11 @@ services:
       - "traefik.enable=true"
       # FastAPI configuration
       - "traefik.http.routers.api.rule=Host(`api.calculator.unilog.company`)"
-      - "traefik.http.routers.api.entrypoints=websecure"
-      - "traefik.http.routers.api.tls=true"
-      - "traefik.http.routers.api.tls.certresolver=myresolver"
+      - "traefik.http.routers.api.entrypoints=web"
       - "traefik.http.services.api.loadbalancer.server.port=8001"
       # Streamlit configuration
       - "traefik.http.routers.streamlit.rule=Host(`calculator.unilog.company`)"
-      - "traefik.http.routers.streamlit.entrypoints=websecure"
-      - "traefik.http.routers.streamlit.tls=true"
-      - "traefik.http.routers.streamlit.tls.certresolver=myresolver"
+      - "traefik.http.routers.streamlit.entrypoints=web"
       - "traefik.http.services.streamlit.loadbalancer.server.port=8502"
     restart: unless-stopped
     healthcheck:
