--- a/nginx/conf.d/calculator.conf
+++ b/nginx/conf.d/calculator.conf
@@ -1,3 +1,7 @@
+# Enable gzip compression
+gzip on;
+gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+
 # Upstream for FastAPI
 upstream api_backend {
     server shipping-calculator:8001;
@@ -11,7 +15,13 @@ upstream streamlit_backend {
 # API Server
 server {
     listen 80;
+    listen 443 ssl;
     server_name api.calculator.unilog.company;
+    
+    # SSL configuration
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
+    ssl_prefer_server_ciphers on;
     
     access_log /var/log/nginx/api_access.log;
     error_log /var/log/nginx/api_error.log;
@@ -28,7 +38,13 @@ server {
 # Streamlit Server
 server {
     listen 80;
+    listen 443 ssl;
     server_name calculator.unilog.company;
+    
+    # SSL configuration
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
+    ssl_prefer_server_ciphers on;
     
     access_log /var/log/nginx/streamlit_access.log;
     error_log /var/log/nginx/streamlit_error.log;
