--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,11 @@
 version: '3.8'
 
 services:
-  nginx:
-    image: nginx:alpine
-    ports:
-      - "80:80"
-      - "443:443"
-    volumes:
-      - ./nginx/conf.d:/etc/nginx/conf.d
-      - ./nginx/logs:/var/log/nginx
-    networks:
-      - web
-    restart: unless-stopped
-
   shipping-calculator:
     build: .
-    networks:
-      - web
+    ports:
+      - "8001:8001"  # FastAPI port
+      - "8502:8502"  # Streamlit port
     volumes:
       - ./data:/app/data
       - ./.env:/app/.env
@@ -30,5 +19,5 @@ services:
       retries: 3
 
 networks:
-  web:
+  default:
     driver: bridge
