hide other methods and add request example

--- a/.env.example
+++ b/.env.example
@@ -8,4 +8,4 @@ NNR_PREMIUM_FEES=20
 UNILOG_PREMIUM_FEES=35
 FUEL_SURCHARGE=8
 DEFAULT_SHIPPING_SERVICE=Economy
-EXCEL_FILE=CTS flat buy 2025.xlsx
+EXCEL_FILE="CTS flat buy 2025.xlsx"
